# click-and-flick

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: tg_notify.yml
assets/: my_mat.wgsl  toon.wgsl
src/: main.rs  map.rs  mine_plugin.rs  scene_change_plugin.rs  states.rs  util.rs
