[package]
name = "clicker"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy_egui = "0.34.1"
bevy-inspector-egui = "0.31.0"
rand = "*"
bevy_rand = "0.11.0"
# https://docs.rs/bevy_rand/latest/bevy_rand/tutorial/ch01_choosing_prng/index.html#choosing-a-prng
bevy_prng = { version = "0.11.0", features = ["wyrand"] }
bevy_simple_screen_boxing = "0.1.0"
avian3d = "0.3"
bevy_pancam = { version = "0.18.0", features = ["bevy_egui"] }
bevy_asset_loader = "0.23.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
